# gtm-v2

./: MIGRATION_PLAN.md  claude.md  package-lock.json  package.json  plan.md
agent/: Dockerfile  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
agent/src/: __init__.py  agent.py
src/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
src/app/[location]/: page.tsx
src/app/[slug]/: page.tsx
src/app/about/: page.tsx
src/app/agencies/: page.tsx
src/app/articles/: page.tsx
src/app/compare/: page.tsx
src/app/consult/: page.tsx
src/app/contact/: page.tsx
src/app/gtm-agencies-boston/: page.tsx
src/app/gtm-agencies-london/: page.tsx
src/app/gtm-agencies-new-york/: page.tsx
src/app/gtm-agencies-san-francisco/: page.tsx
src/app/gtm-agencies-sydney/: page.tsx
src/app/gtm-agencies-toronto/: page.tsx
src/app/privacy/: page.tsx
src/app/terms/: page.tsx
src/components/: providers.tsx
src/components/auth/: AuthButton.tsx
src/components/chat/: FloatingChat.tsx  InlineChatActions.tsx
src/components/dashboard/: LiveDashboard.tsx
src/components/effects/: Confetti.tsx  TypeWriter.tsx  VoiceWaveform.tsx
src/components/hero/: FloatingTerms.tsx  ReactiveHero.tsx
src/components/layout/: Footer.tsx  Navigation.tsx
src/components/report/: AgencyMatchCard.tsx  AnimatedNumber.tsx  BenchmarkComparison.tsx  BudgetPieChart.tsx  CompanyInfoCard.tsx  ContactForm.tsx  FunnelChart.tsx  MatchScoreGauge.tsx  ROICard.tsx  StrategyCard.tsx  (+2 more)
src/lib/: agencies.ts  articles.ts  export.ts  images.ts  locations.ts  seo-pages.ts  types.ts
(+16 files in other folders)
